--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Ant
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-ant
 
-name: Java CI
+name: My First CI
 
 on:
   workflow_dispatch:
@@ -17,9 +17,20 @@ on:
 
 jobs:
   build:
-
+    name: build
     runs-on: ubuntu-latest
-
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+    - name: Build with Ant
+      run: ant -noinput -buildfile build.xml
+  test:
+    name: test
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
